# lamure

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  README.txt  _charts_uv.vis  build_cb  build_cb_release  generate_tags  imgui.ini  lamure.sublime-project  license.txt
apps/bvh_compressor_app/: CMakeLists.txt  main.cpp
apps/bvh_modifier/: CMakeLists.txt  HistogramMatcher.cpp  HistogramMatcher.h  main.cpp  tree_modifier.cpp  tree_modifier.h
apps/bvh_post_normals_adaptive_per_surfel/: CMakeLists.txt  knn.h  main.cpp  node_queue.cpp  node_queue.h  normals.h  statistic.cpp  statistic.h  types.h
apps/bvh_post_radii/: CMakeLists.txt  knn.h  main.cpp  nni.h  node_queue.cpp  node_queue.h  plane.cpp  plane.h  types.h
apps/dilator/: CMakeLists.txt  main.cpp
apps/face_clustering/: CGAL_typedefs.h  CMakeLists.txt  Chart.h  JoinOperation.h  OBJ_printer.h  SymMat.cpp  SymMat.h  SymMat3.cpp  SymMat3.h  Utils.h  cluster_settings.h  eig.h  main.cpp  polyhedron_builder.h
apps/image_based_error_measurement/: CMakeLists.txt  image_based_error_app.cpp  image_based_error_app.h  main.cpp
apps/lod_converter/: CMakeLists.txt  fileHandler.cpp  fileHandler.h  file_handler.cpp  file_handler.h  main.cpp
apps/mesh_fixer/: CMakeLists.txt  main.cpp
apps/mesh_hierarchy/: CMakeLists.txt  main.cpp
apps/mesh_preprocessing/: .gitignore  CGAL_typedefs.h  CMakeLists.txt  Chart.h  ClusterCreator.h  ErrorQuadric.h  GridClusterCreator.h  JoinOperation.h  SymMat.cpp  SymMat.h  Utils.h  bvh_lod_update_from_carl.h  chart_packing.h  constants.h  eig.h  frame_buffer.cpp  frame_buffer.h  includes.h  kdtree.cpp  kdtree.h  main.cpp  mesh_preprocessing.sh  mesh_vt_preprocessing.sh  multi_mesh_vt_batch.sh  multi_mesh_vt_preprocessing.sh  polyhedron_builder.h  structures.h  texture.cpp  texture.h  utils.h
apps/mesh_sampler/: CMakeLists.txt  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  main.cpp  sampler.cpp  sampler.h  texture.cpp  texture.h
apps/nvm_explorer/: CMakeLists.txt  Camera.cpp  Camera.h  Camera_Custom.cpp  Camera_Custom.h  Camera_View.cpp  Camera_View.h  Controller.cpp  Controller.h  Frustum.cpp  Frustum.h  Image.cpp  Image.h  Point.cpp  Point.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Struct_Camera.h  Struct_Image.h  Struct_Line.h  Struct_Point.h  Struct_Surfel_Brush.h  camera.cpp  camera.h  exif.cpp  exif.h  image.cpp  image.h  main.cpp  management.cpp  management.h  measurement.cpp  measurement.h  point.cpp  point.h  renderer.cpp  split_screen_renderer.cpp  tinyply.cpp  (+3 more)
apps/obj_texture_atlas_modifier/: CMakeLists.txt  main.cpp
apps/pcl_regularizer/: CMakeLists.txt  main.cpp
apps/pcl_scanner_pos_to_normal/: CMakeLists.txt  cgal.h  main.cpp
common/: CMakeLists.txt
common/src/: bounding_box.cpp  memory.cpp  memory_status.cpp  semaphore.cpp  sphere.cpp  utils.cpp
lamure_gl/: CMakeLists.txt
lamure_mesh/: CMakeLists.txt
mesh_preprocessing/: CMakeLists.txt
mesh_preprocessing/src/: bvh.cpp  plane.cpp  polyhedron.cpp  triangle.cpp
potentially_visible_set/: CMakeLists.txt
potentially_visible_set/src/: glut_wrapper.cpp  id_histogram.cpp  management.cpp  pvs_database.cpp  pvs_test.cpp  regular_grid.cpp  renderer.cpp  utils.cpp  view_cell_regular.cpp  visibility_test_id_histogram_renderer.cpp
preprocessing/: CMakeLists.txt
preprocessing/src/: basic_algorithms.cpp  builder.cpp  bvh.cpp  bvh_node.cpp  bvh_stream.cpp  external_sort.cpp  logger.cpp  node_serializer.cpp  node_statistics.cpp  normal_computation_plane_fitting.cpp  normal_radii_plane_fitting.cpp  octree.cpp  plane.cpp  prov.cpp  radius_computation_average_distance.cpp  radius_computation_natural_neighbours.cpp  reduction_avg_nearest_neighbour_distance.cpp  reduction_constant.cpp  reduction_entropy.cpp  reduction_every_second.cpp  reduction_hierarchical_clustering.cpp  reduction_hierarchical_clustering_mk2.cpp  reduction_hierarchical_clustering_mk3.cpp  reduction_hierarchical_clustering_mk4.cpp  reduction_hierarchical_clustering_mk5.cpp  reduction_k_clustering.cpp  reduction_normal_deviation_clustering.cpp  reduction_normal_deviation_clustering_provenance.cpp  reduction_pair_contraction.cpp  reduction_particle_simulation.cpp  reduction_random.cpp  reduction_region_growing.cpp  reduction_sorted_every_second.cpp  reduction_spatially_subdivided_random.cpp  reduction_strategy.cpp  serialized_surfel.cpp  surfel.cpp  surfel_array_abstract.cpp  surfel_disk_array.cpp  surfel_mem_array.cpp
provenance/: CMakeLists.txt
provenance/src/: aux.cpp  aux_stream.cpp  auxi.cpp  octree.cpp
pvs_preprocessing/: CMakeLists.txt
pvs_preprocessing/src/: glut_wrapper.cpp  grid_optimizer_irregular.cpp  grid_optimizer_octree.cpp  grid_optimizer_octree_hierarchical.cpp  management_base.cpp  renderer.cpp  visibility_test_id_histogram_renderer.cpp  visibility_test_id_histogram_renderer_corners.cpp  visibility_test_simple_randomized_id_histogram_renderer.cpp
quality_measurement/: CMakeLists.txt
quality_measurement/src/: color_converter.cpp
rendering/: CMakeLists.txt
rendering/shaders/: bounding_box_vis.glslf  bounding_box_vis.glslv  compressed_lq_one_pass.glslv  g_trimesh.glslf  g_trimesh.glslv  lines_shader.glslf  lines_shader.glslv  lq_one_pass.glslf  lq_one_pass.glslg  lq_one_pass.glslv  node_render_texture.glslf  node_visibility.glslf  node_visibility.glslv  nvm_explorer_fragment.glslf  nvm_explorer_fragment_cameras.glslf  nvm_explorer_fragment_frustra.glslf  nvm_explorer_fragment_images.glslf  nvm_explorer_fragment_lines.glslf  nvm_explorer_fragment_pixels_brush.glslf  nvm_explorer_fragment_points.glslf  nvm_explorer_fragment_points_dense.glslf  nvm_explorer_fragment_points_dense_simple.glslf  nvm_explorer_fragment_surfels_brush.glslf  (+50 more)
tests/: CMakeLists.txt  test.cmake
tile-loading/: CMakeLists.txt  Decompressor.cpp  PageCache.cpp  PageCache.h  PageProvider.cpp  PageProvider.h  PagedBuffer.cpp  PagedBuffer.h  QueuedProcessor.cpp  QueuedProcessor.h  Request.cpp  Request.h  RequestQueue.cpp  TextureAtlas.cpp  TextureAtlas.h  definitions.h  image.data  main.cpp
virtual_texturing/: CMakeLists.txt
(+1156 files in other folders)
